# baml-demos

./: .gitignore  .infisical.json  README.md  baml.toml
baml-c-compiler/: README.md  baml.toml  demo.sh
baml-c-compiler/examples/: arithmetic.c  factorial.c  fib.c  loop.c
baml-deep-research-demo/: .gitignore  README.md  baml.toml  main.py  pyproject.toml  streamlit_app.py
baml-deep-research-demo/baml_src/: clients.baml  report.baml  research.baml  search.baml  tests.baml  types.baml
baml-email-agent-demo/: README.md  app.py  baml.toml  pyproject.toml  run_campaign.py
baml-email-agent-demo/baml_src/: clients.baml  email.baml  research.baml  types.baml  workflow.baml
baml-text-to-sql-demo/: .gitignore  README.md  app.py  baml.toml  db.py  main.py  pyproject.toml  seed.py
baml-text-to-sql-demo/baml_src/: baml.toml  generate_sql.baml  schema_format.baml  types.baml  workflow.baml
baml-text-to-sql-demo/supabase/: config.toml
baml_src/: generators.baml
baml_src/ns_agent/: agent.baml  clients.baml  tests.baml
baml_src/ns_ansi/: ansi.baml
baml_src/ns_demo/: demo.baml
baml_src/ns_game/: clients.baml  game.baml
baml_src/ns_images/: pipeline.baml
baml_src/ns_sentiment/: eval.baml
baml_src/ns_server/: server.baml
bamlcode/: README.md  baml.toml
bamlcode/baml_src/: generators.baml
bamlcode/python_demo/: README.md  hello_baml.py  server_roundtrip.py
bamlcode/testdata/: sentiment_cases.json
demo/: README.md  fizzbuzz.py  hello_baml.py  server_roundtrip.py  test_fizzbuzz.py  twosum.py
github-demo/: README.md  baml.toml
google-adk/: .gitignore  README.md  baml.toml  pyproject.toml  run_agent.py
python_demo/: fizzbuzz.py
typescript_demo/: README.md  fizzbuzz.ts  test_fizzbuzz.ts  twosum.ts
(+41 files in other folders)
