[project]
name = "baml-text-to-sql-demo"
version = "0.1.0"
description = "Natural-language to SQL over Postgres — Mastra demo ported to BAML via the Python bridge."
requires-python = ">=3.10"
dependencies = [
    "baml_core",
    "pydantic>=2",
    "psycopg2-binary>=2.9",
    "streamlit>=1.40",
    "pandas>=2",
]

[tool.uv]
package = false

[tool.uv.sources]
# The BAML Python runtime (`baml_core`) is installed editable from the local
# checkout. Swap this for `baml_core = "<version>"` from PyPI once released.
baml_core = { path = "/Users/sam/baml/baml_language/sdks/python", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
